syntax = "proto3";

option go_package = "genproto/voting/";

package voting;

import "election.proto";

service CandidateService{
    rpc Create(CreateCandidateReq) returns(Void){}
    rpc GetById(ById) returns(GetCandidateRes){}
    rpc GetAll(Filter) returns(GetAllCandidateRes){}
    rpc Update(GetCandidateRes) returns(Void){}
    rpc Delete(ById) returns(Void){}
}

message CreateCandidateReq{
    string election_id = 1;
    string public_id = 2;
    string party_id = 3;

}

message GetCandidateRes{
    string id = 1;
    string election_id = 2;
    string public_id = 3;
    string party_id = 4;
}

message GetAllCandidateRes{
    repeated GetCandidateRes Candidates = 1;
}
