syntax = "proto3";

option go_package = "genproto/public/";

package public;

import "public.proto";

service PartyService{
    rpc Create(CreatePartyReq) returns(Void){}
    rpc GetById(ById) returns(GetPartyRes){}
    rpc GetAll(Filter) returns(GetAllPartyRes){}
    rpc Update(GetPartyRes) returns(Void){}
    rpc Delete(ById) returns(Void){}
}

message CreatePartyReq{
    string name = 1;
    string slogan = 2;
    string opened_date = 3;
    string description = 4;
}

message GetPartyRes{
    string id = 1;
    string name = 2;
    string slogan = 3;
    string opened_date = 4;
    string description = 5;
}

message GetAllPartyRes{
    repeated GetPartyRes Parties = 1;
}